# openai-oxide

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  book.toml  context7.json  llms.txt
.githooks/: pre-commit
benchmarks/: README.md  bench_science.js  out2.json  test2.json
blog/: devto-article.md  hn-multiplatform.md
docs/: roadmap.md  workflow.md
examples/: bench_python.py  benchmark.rs  chat.rs  chat_stream.rs  integration_test.rs  live_features_test.rs  live_gpt54.rs  test_chat_bench.rs  test_stream_fc.rs  websocket.rs  ws_stress.rs
openai-oxide/: SKILL.md
openai-oxide-node/: Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  test.js  typed.d.ts  types.d.ts  wrapper.js
openai-oxide-node/examples/: 01_basic_request.js  02_streaming.js  03_websocket.js  bench_node.js  demo-compat.js  parsing-compat.js
openai-oxide-node/npm/darwin-arm64/: package.json
openai-oxide-node/npm/darwin-x64/: package.json
openai-oxide-node/npm/linux-arm64-gnu/: package.json
openai-oxide-node/npm/linux-arm64-musl/: package.json
openai-oxide-node/npm/linux-x64-gnu/: package.json
openai-oxide-node/npm/linux-x64-musl/: package.json
openai-oxide-node/npm/win32-x64-msvc/: package.json
openai-oxide-node/scripts/: npm-publish-with-skip.mjs
openai-oxide-node/src/: lib.rs
openai-oxide-python/: Cargo.toml  README.md  pyproject.toml  test_oxide.py
openai-oxide-python/examples/: demo.py  parsing.py
openai-oxide-python/openai_oxide/: __init__.pyi  compat.py
openai-oxide-python/src/: lib.rs  stream.rs
(+174 files in other folders)
