[package]
name = "openai-oxide-python"
version = "0.1.0"
edition = "2024"
description = "Python bindings for openai-oxide — fastest OpenAI client"
license = "MIT"
publish = false

[lib]
name = "openai_oxide_python"
crate-type = ["cdylib"]

[dependencies]
openai-oxide = { path = "..", default-features = false, features = ["chat", "responses"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
